[tool.poetry]
name = "yacs-stubgen"
version = "0.1.1"
description = "Generate stub file for yacs config."
authors = ["JamzumSum <zzzzss990315@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
yacs = "^0.1.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/out"
