[tool.poetry]
name = "yacs-stubgen"
version = "0.3.0"
description = "Generate stub file for yacs config."
authors = ["JamzumSum <zzzzss990315@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JamzumSum/yacs-stubgen"
repository = "https://github.com/JamzumSum/yacs-stubgen"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/JamzumSum/yacs-stubgen/issues"

[tool.poetry.dependencies]
python = "^3.6.2"
yacs = "~0.1.4"

[tool.poetry.group.test.dependencies]
pytest = [
    { version = "^7.2.0", python = "^3.7" },
    { version = "<7.1.0", python = "~3.6.2" },
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"

[tool.poetry.scripts]
yacstub = "genstub:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
